fix: change grid layout for header overflow

--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@ img {
   margin-inline: auto;
   height: 220px;
   display: grid;
-  grid-template-columns: 1fr auto 1fr;
+  grid-template-columns: minmax(0, 1fr) auto minmax(0, 1fr);
   align-items: center;
   padding: 0 24px;
   box-sizing: border-box;
